--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sass:watch": "yarn sass --watch"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
