--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "sass": "node-sass src/styles/scss/index.scss --output src/styles/css --source-map-embed --source-map-contents --output-style compressed",
-    "sass:watch": "yarn sass --watch"
+    "sass:watch": "yarn sass --watch",
+    "heroku": "./node_modules/heroku-cli/bin/run"
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "heroku-cli": "^6.15.13",
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
