--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "forever": "^0.15.3",
     "heroku-cli": "^6.15.13",
     "history": "^4.7.2",
     "react": "^16.2.0",
