--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "history": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
-  },
-  "devDependencies": {
+    "react-router-dom": "^4.2.2",
     "node-sass": "^4.7.2",
     "react-scripts": "1.0.17"
   }
