--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "express": "^4.16.2",
     "forever": "^0.15.3",
     "heroku-cli": "^6.15.13",
     "history": "^4.7.2",
+    "node-sass": "^4.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "node-sass": "^4.7.2",
     "react-scripts": "1.0.17"
   }
 }
