--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "sass": "node-sass src/styles/scss/index.scss --output src/styles/css --source-map-embed --source-map-contents --output-style compressed",
+    "sass": "node-sass src/styles/scss/index.scss --output src/styles/css --output-style compressed",
     "sass:watch": "yarn sass --watch",
     "heroku": "./node_modules/heroku-cli/bin/run",
     "prod": "./node_modules/.bin/forever -m 5 index.js"
